# mcmc

./: README.md  pyproject.toml
src/mcmc/: __init__.py
src/mcmc/chapter2/: 2-3.py  box-muller.py  gauss.py  pi.py  pi_integral.py
src/mcmc/chapter3/: metropolis.py
src/mcmc/chapter4/: metropolis.py  mixture.py
src/mcmc/chapter5/: multi_metropolis.py
src/mcmc/reject/: reject.py
