[project]
name = "mcmc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "speed1313", email = "speedtry13@icloud.com" }
]
dependencies = [
    "jax[cpu]>=0.4.13",
    "matplotlib>=3.7.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
